--- a/base.cfg
+++ b/base.cfg
@@ -35,7 +35,8 @@ autocomplete-use-omelette = True
 [omelette]
 recipe = collective.recipe.omelette
 eggs = ${instance:eggs}
-
+ignores =
+    cffi
 
 [test]
 recipe = zc.recipe.testrunner
