--- a/.github/workflows/plone-package.yml
+++ b/.github/workflows/plone-package.yml
@@ -18,7 +18,7 @@ jobs:
                 plone-version:
                   - 'Plone60'
                   - 'Plone61'
-                python-version: [3.9, 3.10, 3.11, 3.12, 3.13]
+                python-version: [3.9, 3.13]
 
         steps:
             - uses: actions/setup-python@v4
@@ -49,9 +49,6 @@ jobs:
               run: |
                   python -m pip install --upgrade pip
                   pip install tox tox-gh-actions
-            - name: Black-Check
-              run: |
-                  tox -r -e black-check
             - name: Test with tox
               run: |
                   tox -r
