Disable the check for circular dependencies because of an issue with plone.app.discussion
See https://github.com/plone/plone.app.discussion/pull/253

--- a/.github/workflows/meta.yml
+++ b/.github/workflows/meta.yml
@@ -36,6 +36,9 @@ jobs:
     uses: plone/meta/.github/workflows/release_ready.yml@main
   circular:
     uses: plone/meta/.github/workflows/circular.yml@main
+    # XXX Disabled until plone.app.discussion is free from plone.api
+    #     see: https://github.com/plone/plone.app.discussion/pull/253
+    if: false
 
 ##
 # To modify the list of default jobs being created add in .meta.toml:
