--- a/tox.ini
+++ b/tox.ini
@@ -174,36 +174,38 @@ commands =
     python -m build --sdist
     twine check dist/*
 
-[testenv:circular]
-description = ensure there are no cyclic dependencies
-use_develop = true
-skip_install = false
-# Here we must always constrain the package deps to what is already installed,
-# otherwise we simply get the latest from PyPI, which may not work.
-constrain_package_deps = true
-set_env =
-
-##
-# Specify extra test environment variables in .meta.toml:
-#  [tox]
-#  test_environment_variables = """
-#      PIP_EXTRA_INDEX_URL=https://my-pypi.my-server.com/
-#  """
-##
-allowlist_externals =
-    sh
-deps =
-    pipdeptree
-    pipforester
-    -c https://dist.plone.org/release/6.0-dev/constraints.txt
-
-commands =
-    # Generate the full dependency tree
-    sh -c 'pipdeptree -j > forest.json'
-    # Generate a DOT graph with the circular dependencies, if any
-    pipforester -i forest.json -o forest.dot --cycles
-    # Report if there are any circular dependencies, i.e. error if there are any
-    pipforester -i forest.json --check-cycles -o /dev/null
+# XXX: this is commented because plone.app.discussion wrongly depends on plone.api
+#      See https://github.com/plone/plone.app.discussion/pull/253
+# [testenv:circular]
+# description = ensure there are no cyclic dependencies
+# use_develop = true
+# skip_install = false
+# # Here we must always constrain the package deps to what is already installed,
+# # otherwise we simply get the latest from PyPI, which may not work.
+# constrain_package_deps = true
+# set_env =
+#
+# ##
+# # Specify extra test environment variables in .meta.toml:
+# #  [tox]
+# #  test_environment_variables = """
+# #      PIP_EXTRA_INDEX_URL=https://my-pypi.my-server.com/
+# #  """
+# ##
+# allowlist_externals =
+#     sh
+# deps =
+#     pipdeptree
+#     pipforester
+#     -c https://dist.plone.org/release/6.0-dev/constraints.txt
+#
+# commands =
+#     # Generate the full dependency tree
+#     sh -c 'pipdeptree -j > forest.json'
+#     # Generate a DOT graph with the circular dependencies, if any
+#     pipforester -i forest.json -o forest.dot --cycles
+#     # Report if there are any circular dependencies, i.e. error if there are any
+#     pipforester -i forest.json --check-cycles -o /dev/null
 
 
 ##
